fixed overflow in footer

--- a/src/sections/Footer.module.css
+++ b/src/sections/Footer.module.css
@@ -5,6 +5,6 @@
 }
 
 .group {
-  overflow: scroll;
+  overflow: auto;
   padding: 0 8px;
 }
